# src/routes/blogs.ts
@@ -1,8 +1,11 @@
 import express from 'express'
 import { BlogController } from '../controllers/BlogController';
 
-const router= express.Router();
+const router = express.Router();
 
-router.get('/',BlogController.create);
+router.post('/', BlogController.create);
+router.get('/', BlogController.get);
+router.get('/categories', BlogController.getCategory);
+router.post('/categories', BlogController.createCategory);
 
 export default router;
